2012-10-06  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-10, SVN revision 9514.

2012-10-01  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * SVG specs says "1pt" equals "1.25px" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21967).
  * Support TIFF proprietary tag 34118.
  * The define option is no longer "lazy" interpretation (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22007).

2012-10-01  6.7.9-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-9, SVN revision 9473.

2012-09-27  6.7.9-9 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JPEG decoder when reading a corrupt image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21948).
  * Add exif:thumbnail namespace to distiguish orientation tag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21938).
  * Respect DPX data offsets (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21960).

2012-09-26  6.7.9-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-8, SVN revision 9437.

2012-09-24  6.7.9-8 Cristy  <quetzlzacatenango@image...>
  * Off-by-one error in DrawPolygonPrimitive().
  * Fix memory leak in WebP decoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21943).
  * Certain caption phrases were cut off (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21550).

2012-09-22  6.7.9-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-7, SVN revision 9410.

2012-09-20  6.7.9-7 Cristy  <quetzlzacatenango@image...>
  * jpeg:sampling-factor might be an image property or an option (reference
http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21884).

2012-09-15  6.7.9-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-6, SVN revision 9375.

2012-09-14  6.7.9-6 Cristy  <quetzlzacatenango@image...>