@@ -1,3 +1,6 @@
+2012-10-07  6.8.0-0 Cristy  <quetzlzacatenango@image...>
+  * Check -fx expression early to prevent fault.
+
 2012-10-06  6.7.9-10 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.9-10, SVN revision 9514.
 
